<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" >

                <EditText
                    android:id="@+id/etFName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:hint="@string/text_fname_caps"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/color_text" >
                </EditText>

                <EditText
                    android:id="@+id/etLName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:hint="@string/text_lname_caps"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/color_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/bg_edittext"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/text_email"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/color_text" />

                </LinearLayout>

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:hint="@string/text_passs"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/color_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/etNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_edittext"
                        android:ems="10"
                        android:hint="@string/text_number"
                        android:inputType="numberSigned"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/color_text" />
                </LinearLayout>


            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin" >



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text"
                android:textSize="@dimen/my_default_textSize"
                android:text="Or register with"/>

            <LinearLayout
                android:id="@+id/llRegisterSocial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="@dimen/activity_vertical_margin">



                <ImageButton
                    android:id="@+id/btnGplus"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rutaimagebutton"
                    android:elevation="@dimen/my_default_elevation"
                    android:src="@mipmap/btn_google" />
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnNext"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rutabutton"
        android:elevation="@dimen/my_default_elevation"
        android:gravity="center"
        android:text="@string/text_continue"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/color_text" />


</LinearLayout>