<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ellSigninMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/dllSigninMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <TextView
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/color_text_dark" />

        <TextView
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:hint="@string/text_passs"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/color_text_dark" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llSigninMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:orientation="vertical">

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/llSigninMain"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rutabutton"
            android:elevation="@dimen/my_default_elevation"
            android:gravity="end"
            android:text="@string/text_signin"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/color_text" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/xllSigninMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_text"
            android:textSize="@dimen/my_default_textSize"
            android:text="Or sign in with"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="@dimen/activity_vertical_margin">


            <ImageButton
                android:id="@+id/btnGplus"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rutaimagebutton"
                android:elevation="@dimen/my_default_elevation"
                android:src="@mipmap/btn_google" />
        </LinearLayout>

        <!-- <include layout="@layout/ub__view" /> -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/spCCode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/activity_margin_register"
                android:layout_weight="0.4"
                android:gravity="center"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/color_text_dark" />

            <TextView
                android:id="@+id/etNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext"
                android:ems="10"
                android:hint="@string/text_number"
                android:inputType="numberSigned"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/color_text_dark" />
        </LinearLayout>

        <Button
            android:id="@+id/btnForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:text="@string/text_forgetpass"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/color_text" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>